ns-integrador/api-gestao/hml/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hml-api-gestao
  namespace: hml-ns-integrador
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: hml-api-gestao
  type: ClusterIP
