ns-integrador/api-gestao/hml/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gestao
  namespace: hml-ns-integrador
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/success-codes: 200,301,302
    alb.ingress.kubernetes.io/tags: Environment=hml-api-gestao,Team=${ORG},App=api-gestao

spec:
  rules:
  - host: hml-api-gestao.gotocloud.com.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hml-api-gestao
            port:
              number: 80
